--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "event-stream": "3.3.4",
     "gulp": "3.9.1",
     "gulp-typescript": "3.1.6",
-    "mocha": "3.2.0"
+    "mocha": "3.2.0",
+    "typescript": "2.2.2"
   }
 }
