--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xev",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "Global event emitter",
   "keywords": [
     "event",
@@ -15,12 +15,12 @@
   "types": "./built/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "mocha --harmony"
+    "test": "mocha"
   },
   "devDependencies": {
-    "@types/mocha": "2.2.40",
-    "@types/node": "10.3.2",
-    "mocha": "3.2.0",
-    "typescript": "2.2.2"
+    "@types/mocha": "9.1.0",
+    "@types/node": "17.0.24",
+    "mocha": "9.2.2",
+    "typescript": "4.6.3"
   }
 }
