--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
 		"declaration": true,
 		"sourceMap": false,
 		"target": "es2017",
-		"module": "commonjs",
+		"module": "es2020",
+		"moduleResolution": "node",
+		"strict": true,
+		"strictNullChecks": true,
 		"removeComments": false,
 		"noLib": false,
 		"outDir": "built",
